[package]
name = "zk-loader"
version = "0.0.1-aplha"
authors = ["Khayrutdinov Marat <mail@wtiger.org>"]
licence = "MIT OR Apache-2.0"

[lib]
name = "arguments"
path = "src/arguments.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
