[package]
name = "zk-loader"
version = "0.1.0-aplha"
authors = ["Khayrutdinov Marat <mail@wtiger.org>"]
licence = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
zookeeper = "0.5"
tar = "0.4"
flate2 = "1.0"
