[package]
name = "zk-loader"
version = "0.1.0"
authors = ["Khayrutdinov Marat <mail@wtiger.org>"]
license = "MIT OR Apache-2.0"
description = "CLI application for downloading and uploading zookeeper znodes data"
homepage = "https://github.com/Pegrin/zk-loader"
documentation = "https://github.com/Pegrin/zk-loader"
repository = "https://github.com/Pegrin/zk-loader"
keywords = ["zookeeper", "utility", "backup"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
zookeeper = "0.5"
tar = "0.4"
flate2 = "1.0"
